--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
 <app-header (navigatePageEvent)="navPage($event)"></app-header>
 <div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <app-receipe></app-receipe>
-            <app-shopping-list></app-shopping-list>
-        </div>
+  <div class="row">
+    <div class="col-md-12">
+      <!-- <app-receipe></app-receipe>
+            <app-shopping-list></app-shopping-list> -->
+      <router-outlet></router-outlet>
     </div>
+  </div>
 </div>
