--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,24 +1,32 @@
 <nav class="navbar navbar-expand-lg">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a href="#" class="navbar-brand">Recipe Book</a>
-      </div>
-  
-      <div class="collapse navbar-collapse">
-        <ul class="nav navbar-nav">
-          <li class="nav-item"><a href="#" (click)="NavigatePage('Receipe')">Recipes </a></li>
-          <li class="nav-item"><a href="#" (click)="NavigatePage('Shopping')">Shopping List</a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Save Data</a></li>
-              <li><a href="#">Fetch Data</a></li>
-            </ul>
-          </li>
-        </ul>
-      </div>
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a href="#" class="navbar-brand">Recipe Book</a>
     </div>
-  </nav>
-  
+
+    <div class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <!--href="#" (click)="NavigatePage('Receipe')"-->
+        <li routerLinkActive="active">
+          <a routerLink="/receipes">Recipes </a>
+        </li>
+        <li routerLinkActive="nav-item">
+          <a routerLink="/shopping-list">Shopping List</a>
+        </li>
+      </ul>
+      <button class="btn btn-success" (click)="onSave()">Save Data</button>
+      <button class="btn btn-success" (click)="onFetch()">Fetch Data</button>
+      <ul class="nav navbar-nav navbar-right">
+        <li class="dropdown">
+          <a style="cursor: pointer" class="dropdown-toggle" role="button"
+            >Manage <span class="caret"></span
+          ></a>
+          <ul class="dropdown-menu">
+            <li><a style="cursor: pointer">Save Data</a></li>
+            <li><a style="cursor: pointer">Fetch Data</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
