--- a/src/app/receipe/receipe-detail/receipe-detail.component.html
+++ b/src/app/receipe/receipe-detail/receipe-detail.component.html
@@ -1,31 +1,47 @@
 <div class="row">
-    <div class="col-xs-12">
-        <h1>{{receipe.name}}</h1>
-        <img [src]="receipe.imagePath" alt="{{receipe.name}}" class="img-responsive" style="max-height: 330px;">
-    </div>
+  <div class="col-xs-12">
+    <h1>{{ receipe.name }}</h1>
+    <img
+      [src]="receipe.imagePath"
+      alt="{{ receipe.name }}"
+      class="img-responsive"
+      style="max-height: 330px"
+    />
+  </div>
 </div>
 <div class="row">
-    <div class="col-xs-12">
-        <div class="btn-group">
-            <button class="btn btn-primary dropdown-toggle">
-                Manage Receipe
-                <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu">
-                <li><a href="#">To Shopping list</a></li>
-                <li><a href="#">Edit Receipe</a></li>
-                <li><a href="#">Delete Receipe</a></li>
-            </ul>
-        </div>
+  <div class="col-xs-12">
+    <div class="btn-group">
+      <button class="btn btn-primary dropdown-toggle">
+        Manage Receipe
+        <span class="caret"></span>
+      </button>
+      <ul class="dropdown-menu">
+        <li>
+          <a (click)="onAddToShoppingList()" style="cursor: pointer"
+            >To Shopping list</a
+          >
+        </li>
+        <li><a style="cursor: pointer" (click)="onEdit()">Edit Receipe</a></li>
+        <li><a style="cursor: pointer">Delete Receipe</a></li>
+      </ul>
     </div>
+  </div>
 </div>
 <div class="row">
-    <div class="col-xs-12">
-        {{receipe.description}}
-    </div>
+  <div class="col-xs-12">
+    {{ receipe.description }}
+  </div>
 </div>
 <div class="row">
-    <div class="col-xs-12">
-        Ingredients
-    </div>
+  <div class="col-xs-12">
+    <ul class="list-group">
+      <li
+        class="list-group-item"
+        *ngFor="let ingredient of receipe.ingredients"
+      >
+        {{ ingredient.name }}-{{ ingredient.amount }}
+      </li>
+    </ul>
+  </div>
 </div>
