--- a/src/app/receipe/receipe-list/receipe-item/receipe-item.component.html
+++ b/src/app/receipe/receipe-list/receipe-item/receipe-item.component.html
@@ -1,9 +1,19 @@
-<a href="#" class="list-group-item clearfix" (click)="clickData(receipe)" >
-    <div class="pull-left">
-        <h4 class="list-group-item-heading">{{receipe.name}}</h4>
-        <p class="list-group-item-text">{{receipe.description}}</p>
-    </div>
-    <span class="pull-right">
-        <img [src]="receipe.imagePath" alt="" class="img-responsive" style="max-height:50px">
-    </span>
+<a
+  style="cursor: pointer"
+  [routerLink]="[index]"
+  routerLinkActive="active"
+  class="list-group clearfix"
+>
+  <div class="pull-left">
+    <h4 class="list-group-item-heading">{{ receipe.name }}</h4>
+    <p class="list-group-item-text">{{ receipe.description }}</p>
+  </div>
+  <span class="pull-right">
+    <img
+      [src]="receipe.imagePath"
+      alt=""
+      class="img-responsive"
+      style="max-height: 50px"
+    />
+  </span>
 </a>
