--- a/src/app/receipe/receipe-list/receipe-list.component.html
+++ b/src/app/receipe/receipe-list/receipe-list.component.html
@@ -1,13 +1,16 @@
 <div class="row">
-    <div class="col-xs-12">
-        <button class="btn btn-success">
-            New Receipe
-        </button>
-    </div>
+  <div class="col-xs-12">
+    <button class="btn btn-success" (click)="onNew()">New Receipe</button>
+  </div>
 </div>
-<hr>
+<hr />
 <div class="row">
-    <div class="col-xs-12">
-        <app-receipe-item  *ngFor = "let ReceipeEl of receipes" [receipe] = "ReceipeEl" (receipeEvent)="sendReceipeData($event)"></app-receipe-item>
-    </div>
+  <div class="col-xs-12">
+    <app-receipe-item
+      *ngFor="let ReceipeEl of receipes; let i = index"
+      [receipe]="ReceipeEl"
+      (receipeEvent)="sendReceipeData($event)"
+      [index]="i"
+    ></app-receipe-item>
+  </div>
 </div>
