--- a/src/app/receipe/receipe.component.html
+++ b/src/app/receipe/receipe.component.html
@@ -1,12 +1,13 @@
 <p>receipe works!</p>
 <div class="row">
-    <div class="col-md-5">
-        <app-receipe-list></app-receipe-list>
-    </div>
-    <div class="col-md-7">
-        <app-receipe-detail *ngIf="selectedRecipe; else infoText" [receipe]="selectedRecipe"></app-receipe-detail>
+  <div class="col-md-5">
+    <app-receipe-list></app-receipe-list>
+  </div>
+  <div class="col-md-7">
+    <router-outlet></router-outlet>
+    <!-- <app-receipe-detail *ngIf="selectedRecipe; else infoText" [receipe]="selectedRecipe"></app-receipe-detail>
         <ng-template #infoText>
             <p>Please select a receipe</p>
-        </ng-template>
-    </div>
+        </ng-template> -->
+  </div>
 </div>
